# products_scrapper

./: LICENSE  README.md  pyproject.toml
src/scrapper/: main.py
