[tool.poetry]
name = "products_scrapper"
version = "1.0.0"
description = ""
authors = ["Mavtti"]
readme = "README.md"
homepage = "https://github.com/Mavtti/products_scrapper"
repository = "https://github.com/Mavtti/products_scrapper"

[tool.poetry.dependencies]
python = "3.9.7"

[tool.poetry.dev-dependencies]
pre-commit = "2.15.0"
pytest = "6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
